--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <p> go to the PRE guest gate and get to meet your loved once</p>
     <h3> Keep this site open </h3>
   </div>
-  <button id="gateAccsess">
+  <button onclick="sendSignal()">
     Get Gate Accsess
   </button>
 </body>
-<script src="main.js" type="module"></script>
+<script src="main.js"></script>
 </html>
