--- a/index.html
+++ b/index.html
@@ -35,14 +35,6 @@
       justify-content: center ;
       margin-top: 50px;
     }
-    a{
-      text-decoration: none;
-      color: white;
-      background-color: black;
-      position: absolute;
-      right: 20px;
-      top: 10px;
-    }
     button {
       position : absolute;
       left : 50%;
@@ -59,16 +51,16 @@
 <body>
   <header class="header">
     <h1>PRE</h1>
-    <a href="login.html">logout</a>
   </header>
   <div>
     <p>wellcome to PRE Guest  webpage.</p>
     <p> go to the PRE guest gate and get to meet your loved once</p>
     <h3> Keep this site open </h3>
   </div>
-  <button onclick="sendSignal()">
+  <button id="sendBtn">
     Get Gate Accsess
   </button>
 </body>
 <script src="main.js"></script>
 </html>
+
